name:                sieve-test
version:             0.0.1
license:             BSD3
license-file:        LICENSE
author:              Thomas Koch
maintainer:          thomas@koch.ro
category:            Network

build-type:          Simple

cabal-version:       >=1.24

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    Network.Sieve.Test

  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  build-depends:       base,
                       mime-mail,
                       mtl,
                       transformers,
                       temporary,
                       directory,
                       process,
                       parsec,
                       HUnit,
                       text,
                       bytestring

executable sieve-test-hs
  hs-source-dirs: app
  default-language: Haskell2010
  main-is: main.hs
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  build-depends:       base,
                       mime-mail,
                       mtl,
                       transformers,
                       temporary,
                       directory,
                       process,
                       parsec,
                       HUnit,
                       text,
                       bytestring,
                       sieve-test


